[project]
name = "analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MikhailMsc", email = "puryginm@gmail.com"},
]
dependencies = [
    "polars>=1.24.0",
    "pandas>=2.2.3",
    "pyspark>=3.5.5",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[dependency-groups]
test = [
    "pytest",
]
lint = [
    "ruff>=0.9.9",
    "pytest>=8.3.5",
]
