[project]
name = "analyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MikhailMsc", email = "puryginm@gmail.com"},
]
dependencies = [
    "polars>=1.24.0",
    "pandas>=2.2.3",
    "pyspark>=3.5.5",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.6",
    "pytest>=8.3.5",
    "matplotlib-venn>=1.1.2",
]
requires-python = "==3.12"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.9.9",
    "pytest>=8.3.5",
]
